[package]
name = "mbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version = "~0", default-features = false, features = ["rtu", "tcp"]}

clap = { version = "~3", features = ["derive"] }

http = "*"