[package]
name = "mbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-modbus = { version = "~0", default-features = false, features = ["rtu", "tcp"] }
tokio-serial = "*"

clap = { version = "~4", features = ["derive"] }

anyhow = "~1"
byteorder = "~1"
http = "*"
async-trait = "*"