[package]
name = "mbc"
version = "0.1.0"
edition = "2021"
authors = ["Michael Torres"]
license = "MIT OR Apache-2.0"
description = "A command-line interface for the Modbus protocol"
readme = "README.md"
homepage = "https://github.com/micrictor/mbc"
repository = "https://github.com/micrictor/mbc"
keywords = ["cli", "modbus", "ics"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "~1.21", features = ["full"] }
tokio-modbus = { version = "~0", default-features = false, features = ["rtu", "tcp"] }
tokio-serial = "~5.4"

clap = { version = "~4", features = ["derive"] }

anyhow = "~1"
byteorder = "~1"
http = "~0.2"
async-trait = "~0.1"
serde_json = "1.0.86"
